--- a/18.04/Dockerfile
+++ b/18.04/Dockerfile
@@ -2,12 +2,12 @@ FROM       ubuntu:18.04
 MAINTAINER Priests of the Temple of Syrinx "https://github.com/orgs/TemplesOfSyrinx/teams/priests"
 
 # Set which versions to use
-ENV OPENSSH-SERVER_VERSION 1:7.6p1-4
+ENV OPENSSH_SERVER_VERSION 1:7.6p1-4
 
 # Update and install as root
 RUN apt-get update && \
     apt-get install -y \
-        openssh-server=${OPENSSH-SERVER_VERSION} \
+        openssh-server=${OPENSSH_SERVER_VERSION} \
     && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* \
