--- a/18.04/Dockerfile
+++ b/18.04/Dockerfile
@@ -6,8 +6,8 @@ ENV OPENSSH_SERVER_VERSION 1:7.6p1-4
 
 # Update and install as root
 RUN apt-get update && \
-    apt-get install -y \
-        openssh-server \
+    apt-get install --no-install-recommends -y \
+        openssh-server="$OPENSSH_SERVER_VERSION" \
     && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* \
